--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 :root{
-    --cor-fundo:blue;
+    --cor-fundo:rgb(0, 234, 255);
 
 
 }
-
-
 
 
 *{
@@ -20,6 +18,7 @@ body{
     justify-content: center;
     align-items: center;
     background-color:var(--cor-fundo);
+    transition: backgroud-color 1s;
 
 
 }
